--- a/index.html
+++ b/index.html
@@ -1,27 +1,41 @@
 <html>
-<head>
-    <h1>Zeynep Şule Uzun</h1>
-</head>
-<body>
-    <h2>Hakkımda</h2>
-   
-    <!--kişisel bilgiler-->
-    <h3>Kişisel Bilgiler</h3>
-    <p>Merhaba! Ben Şule. İstanbul'da yaşıyorum. Hukuk Fakültesi mezunuyum ve halihazırda Avukatlık yapıyorum. Yakın bir zamanda kendime yeni bir kariyer hedefi koydum ve kendimi geliştirmek üzere Patika.dev üzerinden Frontend Web Development eğitimi alıyorum.</p>      
-   
-    <!--ilgi alanlarım-->       
-    <h3>İlgi Alanlarım</h3>
+    <head></head>
+    <body>
+        <h1>Zeynep Şule Uzun</h1>
+        <h2>Hakkımda</h2>
+        <!--kişisel bilgiler-->
+        <h3>Kişisel Bilgiler</h3>
+        <p>
+            Merhaba! Ben Şule. İstanbul'da yaşıyorum. Hukuk Fakültesi mezunuyum ve halihazırda Avukatlık yapıyorum. Yakın bir zamanda kendime yeni bir kariyer hedefi koydum ve kendimi geliştirmek üzere Patika.dev üzerinden <strong>Frontend Web Development</strong> eğitimi alıyorum.
+        </p>
+        <!--ilgi alanlarım-->
+        <h3>İlgi Alanlarım</h3>
         <ul>
-            <li>Astrofotoğrafçılık</li>
-            <li>Piyano çalmak</li>
-            <li>Seyahat etmek ve farklı kültürleri deneyimlemek</li>
+            <li>
+                Piyano çalmak
+            </li>
+            <li>
+                Seyahat etmek ve farklı kültürleri deneyimlemek
+            </li>
+            <li>
+                Fotoğrafçılık
+                <ol>
+                    <li>Astrofotoğrafçılık</li>
+                </ol>
+            </li>
         </ul>
-  
         <!--astro açıklama-->
-    <h4>Astrofotoğrafçılık</h4>
-    <p>Astrofotoğrafçılık Wikipedia sayfasında şu şekilde tanımlanmıştır:
-    <cite>Astrofotoğrafçılık (Gökyüzü fotoğrafçılığı), astronomik cisimlerin, gök olaylarının ve gece gökyüzü alanlarının fotoğraflanmasıdır.</cite></p>
-</body>
+        <h4>1. Astrofotoğrafçılık</h4>
+        <p>
+            Astrofotoğrafçılık Wikipedia sayfasında şu şekilde tanımlanmıştır:
+            <br>
+            <br>
+            <cite>
+                Astrofotoğrafçılık (Gökyüzü fotoğrafçılığı), astronomik cisimlerin, gök olaylarının ve gece gökyüzü alanlarının fotoğraflanmasıdır.
+            </cite>
+        </p>
+        <img src="https://images.unsplash.com/photo-1504858700536-882c978a3464?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" width="500" alt="Kuzey Işıkları Fotoğraflaması">
+        <hr>
+        <a href="https://app.patika.dev/zsuleuzun" target="_blank">Patika.dev Profilim</a>
+    </body>
 </html>
-
-<a>https://app.patika.dev/</a>
