--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<html>
-    <head></head>
+<!DOCTYPE html>
+<html lang="tr">
+    <head>
+        <meta: charset="UTF-8">
+        <meta: name="viewport" content="width=device width, initial scale=1.0">
+        <title>Kodluyoruz Ödev 1-2</title>
+    </head>
     <body>
         <h1>Zeynep Şule Uzun</h1>
         <h2>Hakkımda</h2>
